download button, show download btn on animation end

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <script src="js/example.js" defer></script>
 </head>
 <body>
-  <p class="cheat-number-wrapper">У нас уже учатся <span id="cheatNumberEl">0</span> учеников!</p>
+  <p class="cheat-number-wrapper">
+    У нас уже учатся <span id="cheatNumberEl">0</span> учеников!
+  </p>
+
+  <a id="downloadBtn" href="js/cheat-number-module.js" download>
+    Скачать
+  </a>
 </body>
 </html>
